<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/postTitle"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textStyle="bold"
        tools:text="My First Post" />

    <ImageView
        android:id="@+id/postimage"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/postdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:text="@string/lorem" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/postdepart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depart" />

        <TextView
            android:id="@+id/postarriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arriver"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/postHdeppart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hdeppart" />

        <TextView
            android:id="@+id/postHarriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Harriver"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <TextView
        android:id="@+id/postprix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prix"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/postnbplace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nbplace" />

</LinearLayout>
